@@ -1,10 +1,9 @@
 Current {
-	* Review image functions if sould use Buffer instead of color arrays.
 }
 
 Backlog {
 	* Text
-		* Text codepoints management functions (unicode characters)?
+		* Text codepoints management functions (unicode characters)? Could be usefull for luajit.
 		* Some of the Text strings management functions could be easier to use than the Lua ones.
 	* Audio
 		* AudioStream.
