@@ -5,7 +5,7 @@
 #define VERSION_MAJOR 0
 #define VERSION_MINOR 6
 #define VERSION_PATCH 0
-#define VERSION_DEV 1
+#define VERSION_DEV 0
 
 #include "glad.h"
 #include <stdio.h>
